Changes for 1.9.1

 - [DEV-471] fixed sql scripts names consistency (Sasha)
 - [ZBXNEXT-538] include ibm_db2 upgrade patches in distribution package (Sasha)
 - [ZBXNEXT-512] redesign of unknown events (Aly,asaveljevs,Sasha)
 - [ZBX-3130] fixed bug when creating custom graph: host items now can be added (KB)

Changes for 1.9.0

 - [DEV-477] added support of low-level discovery of file systems, network interfaces and SNMP OID's (Sasha,Vedmak)
 - [DEV-490] made graph legend optional (Aly)
 - [DEV-483] added templated screens (Aly)
 - [DEV-485] added multiple urls for map elements (Vedmak)
 - [DEV-471] field graph_theme.noneworktimecolor renamed to nonworktimecolor (Sasha)
 - [DEV-471] database integrity - added foreign keys (Sasha,Vedmak)
 - [ZBXNEXT-483] added vfs.file.contents[file,encoding] check (asaveljevs)
 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.4rc3

 - [ZBX-3040] guest users now can't edit trigger comments (KB)
 - [ZBX-3123] fixed Oracle SQL errors in processing of IT services (Sasha)
 - [ZBXNEXT-205,ZBXNEXT-355] added support of user macros in community, OID, security name and passphrases fields of SNMP items (Sasha,Aly)
 - [ZBXNEXT-357] added support of user macros in parameters field of database item; thanks to Kirill Fateev (Sasha) 
 - [ZBX-3179] fixed memory leaks and 100% CPU usage for proxy with SQLite3 (asaveljevs)
 - [ZBXNEXT-538] include ibm_db2.sql and images_ibm_db2.sql files in distribution package (Sasha)
 - [ZBX-3107] fixed graph bugs: problem with large values, problem with uptime format (KB)
 - [ZBX-2349] unicode support for macros and web scenario steps (KB)
 - [ZBX-3137] fixed errors related to deleting an application that is used in a web scenario (KB)
